<resources>
    <string name="app_name">Recipy</string>

    <!--  FRAGMENT LOGIN  -->
    <string name="fragment_login_email">Email</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_login_sign_in">Sign in</string>
    <string name="fragment_login_login">Login</string>
    <string name="fragment_login_welcome">Welcome back,\nSign in to continue</string>
    <string name="fragment_login_have_account">Don\'t have an account?</string>
    <string name="fragment_login_create_account">Create account</string>

    <!--  FRAGMENT REGISTRATION  -->
    <string name="fragment_registration_create_account">Create account</string>
    <string name="fragment_registration_experience">You need to create account to get a \npersonalized experience</string>
    <string name="fragment_registration_email">Email</string>
    <string name="fragment_registration_name">Name</string>
    <string name="fragment_registration_surname">Surname</string>
    <string name="fragment_registration_password">Password</string>
    <string name="fragment_registration_password_confirm">Confirm Password</string>
    <string name="fragment_registration_registration">Registration</string>
    <string name="fragment_registration_have_account">Already have an account?</string>
    <string name="fragment_registration_sign_in">Sign In</string>

    <!--  FRAGMENT PREFERENCES  -->
    <string name="fragment_preferences_title">Preferences</string>
    <string name="fragment_preferences_cuisine">Cuisine</string>
    <string name="fragment_preferences_diet">Diet</string>
    <string name="fragment_preferences_excluded_ingredients">Excluded Ingredients</string>
    <string name="fragment_preferences_confirm">Confirm</string>

    <!--  FRAGMENT HOME  -->
    <string name="fragment_home_recommendations">Recommendations</string>
    <string name="fragment_home_favorites">Favorites</string>
    <string name="fragment_home_cuisine">Cuisine</string>
    <string name="fragment_home_diet">Diet</string>

    <!--  FRAGMENT SEARCH  -->
    <string name="fragment_search_filter">Filter</string>

    <!--  FRAGMENT DIET  -->
    <string name="fragment_diet_title">Your diet</string>

    <!--  FRAGMENT PROFILE  -->
    <string name="fragment_profile_change_profile">Change profile</string>
    <string name="fragment_profile_change_password">Change password</string>
    <string name="fragment_profile_preferences">Preferences</string>
    <string name="fragment_profile_logout">Logout</string>

    <!--  FRAGMENT CHANGE PASSWORD  -->
    <string name="fragment_change_password_title">Change password</string>
    <string name="fragment_change_password_old">Old password</string>
    <string name="fragment_change_password_new">New password</string>
    <string name="fragment_change_password_new_confirm">Confirm new password</string>
    <string name="fragment_change_password_confirm">Confirm</string>

    <!--  FRAGMENT COOKING  -->
    <string name="fragment_cooking_title">Cooking</string>
    <string name="fragment_cooking_finish">Finish</string>

    <!--  FRAGMENT SEND REVIEW  -->
    <string name="fragment_send_review_leave_review">Leave a review</string>
    <string name="fragment_send_review_enter_here">Enter here</string>
    <string name="fragment_send_review_send">Send</string>
</resources>
