<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="24dp"
    android:paddingEnd="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPen"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_pen_circle_orange"
        app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
        app:layout_constraintEnd_toEndOf="@id/ivAvatar" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="Murat Muratov"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="muratmuratov@murat.com"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@id/tvFullName" />

    <TextView
        android:id="@+id/tvChangeProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/fragment_profile_change_profile"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

    <View
        android:id="@+id/vChangeProfileDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDividerGray"
        app:layout_constraintTop_toBottomOf="@id/tvChangeProfile" />

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/fragment_profile_change_password"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vChangeProfileDivider" />

    <View
        android:id="@+id/vChangePasswordDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDividerGray"
        app:layout_constraintTop_toBottomOf="@id/tvChangePassword" />

    <TextView
        android:id="@+id/tvPreferences"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_chevron_right"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/fragment_profile_preferences"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vChangePasswordDivider" />

    <View
        android:id="@+id/vPreferencesDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDividerGray"
        app:layout_constraintTop_toBottomOf="@id/tvPreferences" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/fragment_profile_logout"
        android:textAllCaps="false"
        android:textColor="@color/colorAccentRed"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vPreferencesDivider"
        app:rippleColor="@color/colorDividerGray" />

</androidx.constraintlayout.widget.ConstraintLayout>