<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/block_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/fragment_preferences_cuisine"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:minHeight="128dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="4dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgCuisines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="48dp" />

                <ImageView
                    android:id="@+id/ivAddCuisine"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_rounded_corners_orange"
                    android:src="@drawable/ic_add_white" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/fragment_preferences_diet"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:minHeight="128dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="4dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgDiets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="48dp" />

                <ImageView
                    android:id="@+id/ivAddDiet"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_rounded_corners_orange"
                    android:src="@drawable/ic_add_white" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/fragment_preferences_excluded_ingredients"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:minHeight="128dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="4dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgExcludedIngredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="48dp" />

                <ImageView
                    android:id="@+id/ivAddExcludedIngredient"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_rounded_corners_orange"
                    android:src="@drawable/ic_add_white" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/fragment_preferences_confirm"
                android:textColor="@color/colorAccentWhite"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="8dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>